# Babel

./: .db  .db~HEAD  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.back  Makefile  README.md  babel  babel.cbp  bla  buildForLinux.sh  buildForWindows.sh  cmake_install.cmake  conanfile.txt
Chopper/: Chopper.cpp  Chopper.hpp  Epoll.hpp  testChopper.cpp  testEPoll.cpp
Client/: .qmake.stash  Client.pro  Makefile  NEEDED  cache.cpp  cache.h  call.cpp  call.h  callform.cpp  callform.ui  clientmainwindows.cpp  clientmainwindows.h  clientprotocol.cpp  clientprotocol.h  conv.cpp  conv.h  frienditem.ui  friendsmanager.cpp  friendsmanager.h  listfrienditem.cpp  listfrienditem.h  login.cpp  mainscreen.h  settings.cpp  settings.h  singletons.cpp  singletons.h  soundwrapper.cpp  soundwrapper.h  udpwrapper.cpp  udpwrapper.h  usersettings.cpp  usersettings.h  usersettings.ui
Client/PaWrapper/: PaWrapper.cpp  PaWrapper.hpp
Client/SoundUtils/: PaWrapper.hpp
Common/: Constant.hpp
Common/Chopper/: Chopper.cpp  Chopper.hpp
Common/Network/: BoostSocket.cpp  QtSocket.cpp  QtSocket.hpp
Common/Opts/: Opts.hpp
Common/Protocol/: Protocol.h  data.h  test.cpp
Network/: BoostSocket.cpp  BoostSocket.hpp  BoostTest.cpp  QtSocket.hpp  QtTest.cpp
QtInterface/: .gitignore  Client.pro  about.ui  call.cpp  call.h  callform.cpp  callform.h  callform.ui  clientmainwindows.cpp  clientmainwindows.h  clientmainwindows.ui  clientprotocol.cpp  clientprotocol.h  conv.cpp  conv.h  conv.ui  frienditem.cpp  frienditem.h  frienditem.ui  friendsmanager.cpp  friendsmanager.h  hashchecker.cpp  listfrienditem.cpp  listgameitem.cpp  listgameitem.h  login.cpp  login.cpp.autosave  login.h  login.h.autosave  login.ui  main.cpp  mainscreen.cpp  mainscreen.ui  resoucesdownloader.cpp  resoucesdownloader.h  resources.qrc  serverconnection.cpp  serverconnection.h  singletons.cpp  singletons.h  (+2 more)
Server/: .db  CMakeLists.txt  main.cpp
Server/Client/: Client.cpp  Client.hpp
Server/CoreServer/: CoreServer.cpp
Server/Db/: Db.cpp  Db.h  Db.tpp  DbData.cpp  DbData.h  DbData.tpp
Server/Resources/: Resources.cpp
build-Client-Desktop_Qt_5_11_2_GCC_64bit-Debug/: Makefile  moc_about.cpp  moc_callform.cpp  moc_clientmainwindows.cpp  moc_clientprotocol.cpp  moc_conv.cpp  moc_frienditem.cpp  moc_friendsmanager.cpp  moc_listfrienditem.cpp  moc_login.cpp  moc_mainscreen.cpp  moc_predefs.h  qrc_resources.cpp  ui_about.h  ui_callform.h  ui_clientmainwindows.h  ui_conv.h  ui_frienditem.h  ui_login.h  ui_mainscreen.h
conanPlatformSettings/: linux.txt  linux_to_windows.txt
project/: Client.h  Server.h
project/Bdd/: Bdd.cpp  Bdd.h  Bdd.tpp  BddData.cpp  BddData.h  BddData.tpp  Main.cpp  a.out  main.cpp  readme.md
project/Bdd/oui/: Bdd.cpp  Bdd.h  BddData.cpp  BddData.h  Main.cpp  a.out  bla.cpp  bla2.cpp  bla3.cpp  bla4.cpp  oui.cpp
project/Client/: Client.h  Friend.h
project/Common/: Constant.hpp  Image.h  Network.h
project/Common/Chopper/: Chopper.cpp  Chopper.hpp  testChopper.cpp
project/Common/Network/: ASocket.cpp  ASocket.hpp  BoostSocket.cpp  BoostSocket.hpp  INetwork.hpp  ISocket.hpp  QtSocket.cpp  QtSocket.hpp  QtTest.cpp
project/Common/Opts/: Opts.cpp  Opts.hpp  a.out  testOpts.cpp
project/Common/Protocol/: BabelStruct.cpp  BabelStruct.h  ClientProtocol.cpp  ClientProtocol.hpp  Protocol.cpp  Protocol.h  Protocol.txt  bla.db  compile.sh  data.h  oui.icon  test.cpp
project/Db/: Db.cpp  Db.h  Db.tpp  DbData.cpp  DbData.h  DbData.tpp  a.out  bla.db  exemple.cpp  readme.md
project/Server/: .db  Bdd.h  CMakeLists.txt  Server.h  buildForLinux.sh  conanfile.txt
project/Server/Client/: Client.cpp  Client.hpp  ServerProtocol.cpp  ServerProtocol.hpp
project/Server/CoreServer/: CoreServer.cpp  CoreServer.hpp
project/Server/Resources/: Resources.hpp
project/Server/UdpRelayServer/: UdpRelayServer.cpp  UdpRelayServer.hpp
src/: PaWrapper.cpp  PaWrapper.hpp
test/: Main.cpp  PaWrapper.cpp  PaWrapper.hpp  Test.cpp  TestAudio.cpp
